--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
    <title> My Homepage </title>
    <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </head>
-   <body> 
-       <div class="container">
-          <div class="row">
-             <div class="col-6">
-               <img src ="1716650509090.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike1" > Like </button>
-               <output id="countLikes1"> 0 </output>
-             </div>
-            <div class="col-6">
-               <img src="Snapchat-1036497766.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike2" > Like </button>
-               <output id="countLikes2"> 0 </output>
-            </div>
-            </div>
+   <body>
+     <div class="container">
+       <div class="row">
+         <div class="col-6">
+           <img src="" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+           <button class="btn btn-primary" type=button" id="btnLike1"> 👍Like </button>
+           <output id="countLikes1">0</output>
+          <button class="btn btn-primary" type="button" id="btnDisLike1"> 👎DisLike </button>
+          <output id="countDisLikes1"> 0 </output>
+         </div>
+         <div class="col-6">
+           <img src="" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+           <button class="btn btn-primary" type=button" id="btnLike2"> 👍Like </button>
+           <output id="countLikes2">0</output>
+          <button class="btn btn-primary" type="button" id="btnDisLike2"> 👎DisLike </button>
+          <output id="countDisLikes2"> 0 </output>
+         </div>
+          <div class="col-4">
+             Comments <br> 
+             <input type = "text" class="form-control" type ="text" id="comment"/>
+             <button class= "btn btn-success" id= "submit"> Submit</button>
+             <textarea class="form-control" id= "commentbox" rows= "24"> </textarea>
        </div>
-      <script src="index.js"> </script>
+     </div>
+    <script src="index.js"></script>
    </body>
 </html>
