--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <output id="countDisLikes1"> 0 </output>
          </div>
          <div class="col-6">
-           <img src="" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+           <img src="Snapchat-1036497766.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
            <button class="btn btn-primary" type=button" id="btnLike2"> 👍Like </button>
            <output id="countLikes2">0</output>
           <button class="btn btn-primary" type="button" id="btnDisLike2"> 👎DisLike </button>
